package com.erp.qualitascareapi.security.enums;

public enum Action {
    READ, CREATE, UPDATE, DELETE, APPROVE, EXPORT, CLOSE
}
