package com.erp.qualitascareapi.security.enums;

public enum Effect {
    ALLOW, DENY
}
